Click to get fuenla images from flickr

--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
             <meta charset="utf-8">
             <title>JSONP</title>
             <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+            <script type="text/javascript" charset="utf-8" src="jsonp.js"></script>
       </head>
       <body>
-            <h3> Hello world!</h3>
+            <p id="fuenla"> Fuenla Images </p>
             <div id="media">
             </div>
       </body>
-      <script type="text/javascript" charset="utf-8" src="jsonp.js"></script>
-      <script type="text/javascript" charset="utf-8" src="http://api.flickr.com/services/feeds/photos_public.gne?tags=fuenlabrada&tagmode=any&format=json&jsoncallback=f">
-      </script>
 </html>
