Multiple categories list done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       </head>
       <body>
             <p id="fuenla"> Fuenla Images </p>
+            <p id="clear"> Clear! </p>
+            Tell me a tag or category list : <input id="list" type="box"/>
+            <p id="category"> Get Category! </p>
             <div id="media">
             </div>
       </body>
